# Fuzzy

./: .gitignore  CONTRIBUTING.md  README.md  fuzzy.cfg.example  pyproject.toml
fuzzy/: __init__.py  __main__.py  customizations.py  databases.py  errors.py  fuzzy.py  interfaces.py  models.py
fuzzy/cogs/: __init__.py  admin.py  bans.py  infraction_admin.py  learns.py  locks.py  logs.py  mutes.py  purge.py  warns.py
fuzzy/migrations/: 001.sql
tests/: test_fuzzy.py
