[tool.poetry]
name = "Fuzzy"
version = "0.1.0"
description = "A basic moderation bot for Discord"
authors = ["Runtime-Ali <57050083+Runtime-Ali@users.noreply.github.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.6.0"
astroid = "^2.5"
lazy-object-proxy = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
